--- a/Course material/2.Basic and Core Consepts/Assignemnt/basics-assignment-1-problem/index.html
+++ b/Course material/2.Basic and Core Consepts/Assignemnt/basics-assignment-1-problem/index.html
@@ -9,25 +9,32 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <script src="https://unpkg.com/vue@next" defer></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js" defer></script>
     <script src="app.js" defer></script>
   </head>
   <body>
     <section id="assignment">
       <!-- 1) Output your name -->
-      <h2>YOUR NAME</h2>
+      <!-- Option one with v-htm -->
+      <!-- <h2 v-html="myName"></h2> -->
+      <!-- Option with interpolation -->
+      <h2>{{ myName }}</h2>
       <!-- 2) Output your age -->
-      <p>YOUR AGE</p>
+      <p>{{ myAge }}</p>
       <!-- 3) Output your age + 5 -->
-      <p>YOUR AGE in 5 years</p>
+      <p>{{ ageInFiveYears() }} in 5 years</p>
       <!-- 4) Output a random number (0 to 1) -->
-      <p>Favorite Number: RANDOM NUMBER BETWEEN 0 AND 1</p>
+      <!-- First way of the random number -->
+      <!-- <p>Favorite Number: {{ favoriteNumber() }}</p> -->
+      <!-- Second way. -->
+      <p>Favorite Number: {{ Math.random() }}</p>
       <div>
         <!-- 5) Display some image you found via Google -->
-        <img src="SOME IMAGE URL" />
+        <img v-bind:src="picLink" />
       </div>
       <!-- 6) Prepopulate the input field with your name via the "value" attribute -->
-      <input type="text" />
+      <!-- <input v-model="myName" /> -->
+      <input type="text" v-bind:value="myName" />
     </section>
   </body>
 </html>
