--- a/Course material/2.Basic and Core Consepts/Assignemnt/basics-assignment-1-problem/index.html
+++ b/Course material/2.Basic and Core Consepts/Assignemnt/basics-assignment-1-problem/index.html
@@ -25,9 +25,9 @@
       <p>{{ ageInFiveYears() }} in 5 years</p>
       <!-- 4) Output a random number (0 to 1) -->
       <!-- First way of the random number -->
-      <!-- <p>Favorite Number: {{ favoriteNumber() }}</p> -->
+      <p>Favorite Number: {{ favoriteNumber() }}</p>
       <!-- Second way. -->
-      <p>Favorite Number: {{ Math.random() }}</p>
+      <!-- <p>Favorite Number: {{ Math.random() }}</p> -->
       <div>
         <!-- 5) Display some image you found via Google -->
         <img v-bind:src="picLink" />
