--- a/Course material/2.Basic and Core Consepts/Projects/basics-03-events-starting-code/index.html
+++ b/Course material/2.Basic and Core Consepts/Projects/basics-03-events-starting-code/index.html
@@ -21,8 +21,16 @@
       <button v-on:click="add(10)">Add 10</button>
       <button v-on:click="reduce(5)">Subtract 5</button>
       <p>Result: {{ counter }}</p>
-      <input type="text" v-on:input="setName($event, 'Bamboff')">
-      <p>Your Name: {{ userName }}</p>
+      <input
+        type="text"
+        v-on:input="setName($event, 'Bamboff')"
+        v-on:keyup.enter="confirmInput"
+      />
+      <p>Your Name: {{ confirmedName }}</p>
+      <form v-on:submit.prevent>
+        <input type="text" />
+        <button>Sign Up</button>
+      </form>
     </section>
   </body>
 </html>
