rasum dasm fasm

--- a/Course material/2.Basic and Core Consepts/Projects/basics-03-events-starting-code/index.html
+++ b/Course material/2.Basic and Core Consepts/Projects/basics-03-events-starting-code/index.html
@@ -30,7 +30,7 @@
       <p>Your Name: {{ confirmedName }}</p>
       <form v-on:submit.prevent>
         <input type="text" />
-        <button>Sign Up</button>
+        <button v-on:click="submitForm">Sign Up</button>
       </form>
     </section>
   </body>
