--- a/Course material/2.Basic and Core Consepts/Assignemnts/Assignment 4/basics-assignment-4-problem/index.html
+++ b/Course material/2.Basic and Core Consepts/Assignemnts/Assignment 4/basics-assignment-4-problem/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <script src="https://unpkg.com/vue@next" defer></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js" defer></script>
     <script src="app.js" defer></script>
   </head>
   <body>
@@ -19,10 +19,10 @@
     <section id="assignment">
       <!-- 1) Fetch the user input and use it as a CSS class -->
       <!-- The entered class should be added to the below paragraph -->
-      <input type="text" />
+      <input type="text" v-model="userInput" />
       <!-- (available classes: "user1", "user2") -->
-      <p>
-        Style me!
+      <p :class="[{user1: user1}, {user2:user2}]">
+        {{ colorOutput }}
       </p>
       <button>Toggle Paragraph</button>
       <!-- 2) Use the "visible" and "hidden" classes to show/ hide the above paragraph -->
