assignment reworked and complete

--- a/Course material/2.Basic and Core Consepts/Assignemnts/Assignment 4/basics-assignment-4-problem/index.html
+++ b/Course material/2.Basic and Core Consepts/Assignemnts/Assignment 4/basics-assignment-4-problem/index.html
@@ -21,16 +21,16 @@
       <!-- The entered class should be added to the below paragraph -->
       <input type="text" v-model="userInput" />
       <!-- (available classes: "user1", "user2") -->
-      <p :class="[{user1: user1}, {user2:user2}]">
-        {{ colorOutput }}
+      <p :class="paraClasses">
+        Style me!
       </p>
-      <button>Toggle Paragraph</button>
+      <button @click="buttonClicked">Toggle Paragraph</button>
       <!-- 2) Use the "visible" and "hidden" classes to show/ hide the above paragraph -->
       <!-- Clicking the button should toggle between the two options -->
 
       <!-- 3) Add dynamic inline styling to the below paragraph and let the user enter a background-color -->
-      <input type="text" />
-      <p>Style me inline!</p>
+      <input type="text" v-model="inlineInput"/>
+      <p :style="{backgroundColor: inlineInput}">Style me inline!</p>
     </section>
   </body>
 </html>
