--- a/Course material/3.Renrering Conditional Content & Lists/Assignments/lists-cond-assignment-problem/index.html
+++ b/Course material/3.Renrering Conditional Content & Lists/Assignments/lists-cond-assignment-problem/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <script src="https://unpkg.com/vue@next" defer></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js" defer></script>
     <script src="app.js" defer></script>
   </head>
   <body>
@@ -20,14 +20,15 @@
       <h2>Assignment</h2>
       <!-- 1) Add code to manage a list of tasks in a Vue app -->
       <!-- When clicking "Add Task" a new task with the entered text should be added -->
-      <input type="text">
-      <button>Add Task</button>
-      <ul>
+      <input type="text" v-model="newTask" />
+      <button @click="addTask">Add Task</button>
+      <ul v-show="isClicked">
+        <li v-for="(task, index) in tasks" @click="removeTask(index)">{{ task }}</li>
         <!-- 2) Output the list of tasks here -->
       </ul>
       <!-- 3) When the below button is pressed, the list should be shown or hidden -->
       <!-- BONUS: Also update the button caption -->
-      <button>Hide / Show List</button>
+      <button @click="showList">{{isClicked ? 'Hide' : 'Show'}}</button>
     </section>
   </body>
 </html>
