--- a/Course material/4. Course Project. The Monster Slayer Game/Project/1. Start to finish/index.html
+++ b/Course material/4. Course Project. The Monster Slayer Game/Project/1. Start to finish/index.html
@@ -29,15 +29,47 @@
           <div class="healthbar__value" :style="playerHealthBar"></div>
         </div>
       </section>
-      <section id="controls">
+      <section class="container" v-if="winner">
+        <h2>
+          Game over! 
+          <p>Total damage dealt: <p>Player: <span class="log--player"
+            > {{ totalPlayerDamage }}</span</p>
+           <p>Monster: <span class="log--monster">{{ totalMonsterDamage }}</span></p></p>
+           <p>Total Player Heals: <span class="log--heal">{{ totalPlayerHeal }}</span></p>
+        </h2>
+        <h3 v-if="winner === 'monster'">You lost!</h3>
+        <h3 v-else-if="winner === 'player'">You won!</h3>
+        <h3 v-else>Its a draw!</h3>
+        <button @click="gameReset">Start New Game!</button>
+      </section>
+      <section v-else id="controls">
         <button @click="attackMonster">ATTACK</button>
-        <button @click="playerSpecialAttack" :disabled="mayUseSpecialAttack">SPECIAL ATTACK</button>
-        <button @click="playerHeal" :disabled="!hasHealed">HEAL</button>
-        <button>SURRENDER</button>
+        <button @click="playerSpecialAttack" :disabled="mayUseSpecialAttack">
+          SPECIAL ATTACK
+        </button>
+        <button @click="playerHeal" :disabled="!hasHeals">HEAL</button>
+        <button @click="surrender">SURRENDER</button>
       </section>
       <section id="log" class="container">
         <h2>Battle Log</h2>
-        <ul></ul>
+        <ul>
+          <li v-if="battleLog.length === 0">No logs Yet!</li>
+          <li v-for="logMessage in battleLog">
+            <span
+              :class="{'log--player': logMessage.actionBy === 'player', 'log--monster': logMessage.actionBy === 'monster'}"
+              >{{logMessage.actionBy === 'player' ? "Player" : "Monster"
+              }}</span
+            >
+            <span v-if="logMessage.actionType === 'heal'">
+              heals himself for
+              <span class="log--heal">{{ logMessage.actionValue }}</span></span
+            >
+            <span v-else>
+              attacks and deals
+              <span class="log--damage">{{ logMessage.actionValue }}</span>
+            </span>
+          </li>
+        </ul>
       </section>
     </div>
   </body>
